// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tabs.Tab should not render styles when unstyled prop is set 1`] = `
.emotion-1 {
  border: 0;
  -webkit-clip-path: rect(0 0 0 0);
  clip-path: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.emotion-2 {
  color: #3b3f45;
  margin: 0;
  margin: 0 0 3.2rem;
  font-family: -apple-system,BlinkMacSystemFont,San Francisco,Roboto,Segoe UI,Helvetica Neue,sans-serif;
  font-weight: 400;
  font-size: 1.8rem;
  line-height: 1.5555555555555556;
}

<div>
  <section
    class="emotion-3"
    role="tabpanel"
    tabindex="-1"
  >
    <span
      class="emotion-1"
    >
      <p
        class="Nautilus-Paragraph emotion-0"
      >
        About
      </p>
    </span>
    <p
      class="Nautilus-Paragraph emotion-2"
    >
      Puppies are cute.
    </p>
  </section>
</div>
`;

exports[`Tabs.Tab should render styles for a Tabs.Tab 1`] = `
.emotion-3 {
  display: none;
}

.emotion-3:focus {
  box-shadow: 0 0 0 0.4rem #f5bbda;
  outline: 0;
}

.emotion-1 {
  border: 0;
  -webkit-clip-path: rect(0 0 0 0);
  clip-path: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.emotion-2 {
  color: #3b3f45;
  margin: 0;
  margin: 0 0 3.2rem;
  font-family: -apple-system,BlinkMacSystemFont,San Francisco,Roboto,Segoe UI,Helvetica Neue,sans-serif;
  font-weight: 400;
  font-size: 1.8rem;
  line-height: 1.5555555555555556;
}

<div>
  <section
    class="emotion-3"
    role="tabpanel"
    tabindex="-1"
  >
    <span
      class="emotion-1"
    >
      <p
        class="Nautilus-Paragraph emotion-0"
      >
        About
      </p>
    </span>
    <p
      class="Nautilus-Paragraph emotion-2"
    >
      Puppies are cute.
    </p>
  </section>
</div>
`;
